--- a/Readme.org
+++ b/Readme.org
@@ -1,15 +1,12 @@
+** Purpose
+
+A lightweight binary that can be used to create vault raft snapshots without needing to download and use the giant Vault binary. It works by making an HTTP POST request against the snapshot endpoint.
+
 ** Environment variables
 
-*** Vault
+I intend to use this in conjunction with a Vault injector sidecar on Kubernetes, which means that secrets will end up inside files on disk. Therefore, all the environment variables below are treated as paths to files on disk if the value starts with a =*=.
 
 - =VAULT_ADDR=: =https://server:port= or =@/path/to/file/=
 - =VAULT_TOKEN=: =abcd= or =@/path/to/file=
 - =VAULT_CACERT=: =Begin Certificate .. End= or =@/path/to/file=
 
-*** Restic
-
-Uses all environment variables supported by restic, here are some salient ones:
-
-- =RESTIC_REPOSITORY=: Path to repository
-- =RESTIC_PASSWORD_FILE=: Path to file containing password
-- =RESTIC_CACHE_DIR=: Path to directory where restsic's cache is stored
