--- a/Readme.org
+++ b/Readme.org
@@ -4,7 +4,7 @@ A lightweight binary that can be used to create vault raft snapshots without nee
 
 ** Environment variables
 
-I intend to use this in conjunction with a Vault injector sidecar on Kubernetes, which means that secrets will end up inside files on disk. Therefore, all the environment variables below are treated as paths to files on disk if the value starts with a =*=.
+I intend to use this in conjunction with a Vault injector sidecar on Kubernetes, which means that secrets will end up inside files on disk. Therefore, all the environment variables below are treated as paths to files on disk if the value starts with a =@=.
 
 - =VAULT_ADDR=: =https://server:port= or =@/path/to/file/=
 - =VAULT_TOKEN=: =abcd= or =@/path/to/file=
